--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Carla Rowold"
-  avatar           : "profile.png"
+  avatar           : "profile2.jpg"
   bio              : "Research on gender inequalities over the life course "
   location         : "Oxford | Berlin"
   employer         :
