--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "linkedin.com/carla-rowold"
-  orcid            : "http://orcid.org/https://orcid.org/0000-0003-0292-6096"
+  orcid            : "http://orcid.org/0000-0003-0292-6096"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
